--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -6,12 +6,7 @@
         <a class="navbar-brand title font-weight-lighter" href="{{ site.baseurl }}/">
           {% if site.title == 'blank' %}
             {% if site.first_name %}
-              <span class="font-weight-bold">
-                {{- site.first_name -}}
-              </span>
-            {% endif %}
-            {% if site.middle_name %}
-              {{- site.middle_name -}}
+              {{- site.first_name -}}
             {% endif %}
             {% if site.last_name %}
               {{- site.last_name -}}
@@ -111,7 +106,7 @@
             <!-- Search -->
             <li class="nav-item">
               <button id="search-toggle" title="Search" onclick="openSearchModal()">
-                <span class="nav-link">ctrl k <i class="ti ti-search"></i></span>
+                <span class="nav-link">Search <i class="ti ti-search"></i></span>
               </button>
             </li>
           {% endif %}
@@ -119,7 +114,7 @@
             <!-- Toogle theme mode -->
             <li class="toggle-container">
               <button id="light-toggle" title="Change theme">
-                <i class="ti ti-sun-moon" id="light-toggle-system"></i>
+                <!-- <i class="ti ti-sun-moon" id="light-toggle-system"></i> -->
                 <i class="ti ti-moon-filled" id="light-toggle-dark"></i>
                 <i class="ti ti-sun-filled" id="light-toggle-light"></i>
               </button>
