--- a/_includes/resume/basics.liquid
+++ b/_includes/resume/basics.liquid
@@ -1,5 +1,5 @@
 <table class="table table-cv table-sm table-borderless table-responsive table-cv-map">
-  {% assign skip_basics = 'image,profiles,location' | split: ',' %}
+  {% assign skip_basics = 'image,profiles' | split: ',' %}
   {% for content in data[1] %}
     {%
       if (content[1] == "") or (skip_basics contains
@@ -13,7 +13,7 @@
         <b>{{ content[0] | capitalize }}</b>
       </td>
       <td class="p-1 pl-2 font-weight-light text">
-        {% if content[0] == 'url' %}
+        {% if content[0] == 'website' %}
           <a href="{{ content[1] }}" target="_blank" rel="noopener noreferrer">{{ content[1] }}</a>
         {% elsif content[0] == 'email' %}
           <a href="mailto:{{ content[1] }}" target="_blank">{{ content[1] }}</a>
