--- a/_includes/resume/education.liquid
+++ b/_includes/resume/education.liquid
@@ -39,7 +39,9 @@
             <a href="{{ content.url }}">{{ content.studyType }}</a>
           </h6>
           <h6 class="ml-1 ml-md-4 my-normal-text" style="font-size: 0.95rem">{{ content.institution }}</h6>
-          <h6 class="ml-1 ml-md-4 my-normal-text" style="font-size: 0.95rem"><a href="{{ content.labUrl }}">{{ content.lab }}</a></h6>
+          <h6 class="ml-1 ml-md-4 my-normal-text" style="font-size: 0.95rem">
+            <a href="{{ content.labUrl }}">{{ content.lab }}</a>
+          </h6>
           <h6 class="ml-1 ml-md-4 my-normal-text" style="font-size: 0.95rem; font-style: italic">{{ content.area }}</h6>
           <ul class="items">
             {% for item in content.courses %}
