--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -5,7 +5,8 @@ layout: default
   <header class="post-header">
     <h1 class="post-title my-medium-text" style="color: var(--global-theme-color);">
       {% if site.title == 'blank' %}
-        {{ site.first_name }} {{ site.last_name }}
+        {{ site.first_name }}
+        {{ site.last_name }}
       {% else %}
         {{ site.title }}
       {% endif %}
