--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,7 +17,20 @@ li,
 span,
 strong {
   color: var(--global-text-color);
-  font-family: 'Proxima Soft', 'Noto Serif SC', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:
+    "Proxima Soft",
+    "Noto Serif SC",
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
 }
 
 hr {
@@ -60,8 +73,10 @@ blockquote {
   background: var(--global-quote-bg-color);
   border-left: 5px solid var(--global-theme-color);
   border-radius: 5px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12), 0 3px 10px rgba(0, 0, 0, 0.08);
-  padding: .6rem .8rem;
+  box-shadow:
+    0 1px 2px rgba(0, 0, 0, 0.12),
+    0 3px 10px rgba(0, 0, 0, 0.08);
+  padding: 0.6rem 0.8rem;
   margin: 1em 0;
   // padding: 1em;
   // font-size: 1.2rem;
@@ -842,11 +857,11 @@ code {
   background-color: var(--global-code-bg-color);
   border-radius: 3px;
   padding: 3px 3px;
-  font-family: 'Consolas', 'Noto Serif SC', monospace !important;
+  font-family: "Consolas", "Noto Serif SC", monospace !important;
 }
 
 pre code span {
-  font-family: 'Consolas', 'Noto Serif SC', monospace !important;
+  font-family: "Consolas", "Noto Serif SC", monospace !important;
   tab-size: 4;
 }
 
@@ -1141,14 +1156,14 @@ ninja-keys::part(ninja-input-wrapper) {
   border-left: 5px solid $note-bg-color;
   border-radius: 5px;
   box-shadow: var(--global-box-shadow);
-  padding: .6rem .8rem;
+  padding: 0.6rem 0.8rem;
   &::before {
     content: "note";
     color: $note-title-color;
     display: block;
     font-weight: bold;
     text-transform: uppercase;
-    padding-bottom: .125rem;
+    padding-bottom: 0.125rem;
   }
 }
 
@@ -1157,14 +1172,14 @@ ninja-keys::part(ninja-input-wrapper) {
   border-left: 5px solid $important-bg-color;
   border-radius: 5px;
   box-shadow: var(--global-box-shadow);
-  padding: .6rem .8rem;
+  padding: 0.6rem 0.8rem;
   &::before {
     content: "important";
     color: $important-title-color;
     display: block;
     font-weight: bold;
     text-transform: uppercase;
-    padding-bottom: .125rem;
+    padding-bottom: 0.125rem;
   }
 }
 
@@ -1173,14 +1188,14 @@ ninja-keys::part(ninja-input-wrapper) {
   border-left: 5px solid $warning-bg-color;
   border-radius: 5px;
   box-shadow: var(--global-box-shadow);
-  padding: .6rem .8rem;
+  padding: 0.6rem 0.8rem;
   &::before {
     content: "warning";
     color: $warning-title-color;
     display: block;
     font-weight: bold;
     text-transform: uppercase;
-    padding-bottom: .125rem;
+    padding-bottom: 0.125rem;
   }
 }
 
@@ -1189,14 +1204,14 @@ ninja-keys::part(ninja-input-wrapper) {
   border-left: 5px solid $highlight-bg-color;
   border-radius: 5px;
   box-shadow: var(--global-box-shadow);
-  padding: .6rem .8rem;
+  padding: 0.6rem 0.8rem;
   &::before {
     content: "highlight";
     color: $highlight-title-color;
     display: block;
     font-weight: bold;
     text-transform: uppercase;
-    padding-bottom: .125rem;
+    padding-bottom: 0.125rem;
   }
 }
 
@@ -1229,10 +1244,10 @@ ninja-keys::part(ninja-input-wrapper) {
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 
 .md-img {
   text-align: center;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
