Blog update on May 29, 2024

--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -29,6 +29,7 @@
   type="text/css"
   href="{{ site.third_party_libraries.google_fonts.url.fonts }}"
 >
+<link rel="preload" href="{{ '/assets/css/fonts.css' | relative_url }}" as="style">
 <link rel="stylesheet" href="{{ '/assets/css/fonts.css' | relative_url }}">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
